--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-Flask==2.3.3
+Flask==2.3.2
 Flask-Bootstrap==3.3.7.1
-Flask-WTF==1.1.1
-WTForms==3.1.2
-scikit-learn==1.4.2
-numpy==1.26.4
+Flask-WTF==1.2.1
+WTForms==3.0.1
+scikit-learn==1.3.0
+numpy>=1.24,<2.0
+gunicorn==21.2.0
